v0.3.0
Refactor: got rid of NetzkeLayout model, now all layouts are stored in netzke_preferences
New: persistent_config now has a method for_widget that accepts a block
autotest compatibility
New: String#to_b converts a string to true/false
New: Netzke::Base.session introduced for session data
New: weak_default_config and strong_default_config can now be specified in Netzke::Base.session, which get merged with configuration of *each* widget (application-wide)
Fix: (degradation) flash message is now shown again in case of erroneous attempt to load a widget

v0.2.11
Introduction of getOwnerWidget()-method to Ext.Component. It provides the Netzke widget this Component belongs to.

v0.2.10
Removed dependency on 'json' gem.
Rails v2.3.2 compatibility.

v0.2.9
Actions, toolbars and tools reworked for easier configuration.
Menus introduced (based on actions).
Significant code clean-up.
Bug fix (nasty one): Ext.widgetMixIn was getting messed up along with dynamic widget loading.
Must work in IE now.

v0.2.8
Support for extra javascripts and stylesheets per widget.

v0.2.7
QuickTips get initialized now, as otherwise Ext 2.2.1 doesn't properly destroy() BoxComponents for me.

v0.2.6
FeedackGhost is now capable of displaying multiple flash messages.
Dependencies slightly refactored.
An informative exception added to Base#aggregatee_instance.
JS-level inheritance enabled.
Work-around for the problem with Ext 2.2.1 in loadWidget.
Events "<action_id>click" added to the widgets along with the actions.
aggregatee_missing method added to Netzke::Base - called when a non-existing aggregate of a widget is tried to be invoked
Code readability improvements.

v0.2.5
Minor code restructuring.

v0.2.4
Some minor improvements.

v0.2.3
FeedbackGhost will show the feedback on the top of the screen independent of the page scrolling.
Ext.Panel#loadWidget will accept null as url to delete the currently loaded widget
Bug fix: persistent_config works again

v0.2.2