@@ -2,13 +2,30 @@ module Netzke
   module ControllerExtensions
     def self.included(base)
       base.extend ControllerClassMethods
-      base.send(:before_filter, :set_user)
+      base.send(:before_filter, :set_session_data)
     end
     
-    def set_user
+    def set_session_data
+      logger.debug "!!! session: #{session.inspect}"
       Netzke::Base.session = session
       session[:user] = current_user if defined?(current_user)
-      Netzke::Base.update_session
+
+      Netzke::Base.user = session[:user] # for backward compatibility (TODO: eliminate the need for this)
+      
+      # set netzke_just_logged_in and netzke_just_logged_out states (may be used by Netzke widgets)
+      if session[:_netzke_next_request_is_first_after_login]
+        session[:netzke_just_logged_in] = true
+        session[:_netzke_next_request_is_first_after_login] = false
+      else
+        session[:netzke_just_logged_in] = false
+      end
+
+      if session[:_netzke_next_request_is_first_after_logout]
+        session[:netzke_just_logged_out] = true
+        session[:_netzke_next_request_is_first_after_logout] = false
+      else
+        session[:netzke_just_logged_out] = false
+      end
     end
     
     def method_missing(method_name)
